@@ -143,7 +143,6 @@ BAT *BATjoin(BAT *l, BAT *r, BUN estimate);
 BAT *BATkdiff(BAT *b, BAT *c);
 gdk_return BATkey(BAT *b, int onoff);
 BAT *BATkintersect(BAT *b, BAT *c);
-BAT *BATkunion(BAT *b, BAT *c);
 BAT *BATleftfetchjoin(BAT *b, BAT *s, BUN estimate);
 BAT *BATleftjoin(BAT *l, BAT *r, BUN estimate);
 BAT *BATmark(BAT *b, oid base);
@@ -744,7 +743,6 @@ str ALGjoin2(bat *l, bat *r, const bat *lid, const bat *rid);
 str ALGjoinPath(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str ALGjoinestimate(bat *result, const bat *lid, const bat *rid, const lng *estimate);
 str ALGkdiff(bat *result, const bat *lid, const bat *rid);
-str ALGkunion(bat *result, const bat *lid, const bat *rid);
 str ALGleftfetchjoin(bat *result, const bat *lid, const bat *rid);
 str ALGleftjoin(bat *result, const bat *lid, const bat *rid);
 str ALGleftjoinestimate(bat *result, const bat *lid, const bat *rid, const lng *estimate);
@@ -806,7 +804,6 @@ str ALGtmark_default(bat *result, const bat *bid);
 str ALGtmarkp(bat *result, const bat *bid, const int *nr_parts, const int *part_nr);
 str ALGtsort(bat *result, const bat *bid);
 str ALGtsort_rev(bat *result, const bat *bid);
-str ALGtunion(bat *result, const bat *lid, const bat *rid);
 str ALGvariance(dbl *res, const bat *bid);
 str ALGvariancep(dbl *res, const bat *bid);
 str AUTHaddUser(oid *ret, Client *c, str *user, str *pass);
@@ -2354,7 +2351,6 @@ str joinRef;
 str jsonRef;
 str kdifferenceRef;
 int keepProp;
-str kunionRef;
 str languageRef;
 str leftfetchjoinPathRef;
 str leftfetchjoinRef;
