@@ -1177,12 +1177,6 @@ ALGsemijoin(bat *result, const bat *lid, const bat *rid)
 }
 
 str
-ALGkunion(bat *result, const bat *lid, const bat *rid)
-{
-	return ALGbinary(result, lid, rid, BATkunion, "algebra.kunion");
-}
-
-str
 ALGkdiff(bat *result, const bat *lid, const bat *rid)
 {
 	return ALGbinary(result, lid, rid, BATkdiff, "algebra.kdiff");
@@ -1195,33 +1189,6 @@ ALGsample(bat *result, const bat *bid, const int *param)
 }
 
 /* add items missing in the kernel */
-str
-ALGtunion(bat *result, const bat *bid, const bat *bid2)
-{
-	BAT *b, *b2, *bn;
-
-	if ((b = BATdescriptor(*bid)) == NULL)
-		throw(MAL, "algebra.tunion", RUNTIME_OBJECT_MISSING);
-	if ((b2 = BATdescriptor(*bid2)) == NULL){
-		BBPunfix(*bid2);
-		throw(MAL, "algebra.tunion", RUNTIME_OBJECT_MISSING);
-	}
-
-	bn = BATkunion(BATmirror(b),BATmirror(b2));
-	if (bn) {
-		bn = BATmirror(bn);
-		if (!(bn->batDirty&2)) BATsetaccess(bn, BAT_READ);
-		*result = bn->batCacheid;
-		BBPkeepref(*result);
-		BBPunfix(b->batCacheid);
-		BBPunfix(b2->batCacheid);
-		return MAL_SUCCEED;
-	}
-	BBPunfix(b->batCacheid);
-	BBPunfix(b2->batCacheid);
-	throw(MAL, "algebra.tunion", GDK_EXCEPTION);
-}
-
 str
 ALGtdifference(bat *result, const bat *bid, const bat *bid2)
 {
