@@ -227,10 +227,6 @@ address ALGtinter;
 command tdiff( left:bat[:oid,:oid], right:bat[:oid,:oid] ) :bat[:oid,:oid]
 address ALGtdiff;
 
-command tunion ( left:bat[:any_1,:any_2], right:bat[:any_1,:any_2])
-		:bat[:any_1,:any_2]
-address ALGtunion;
-
 # @+ Join operations
 # The core of every relational engine.
 # The join collection provided by the GDK kernel.
