@@ -1,3 +1,6 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Fri Aug 14 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed algebra.tunion.
+
